# PayAPI

./: Makefile  README.md  pyproject.toml
payapi/: base_models.py  config.py  main.py
payapi/alembic/: env.py
payapi/alembic/versions/: 2025_03_17_1839-233815f36585_user_initial_migration.py  2025_03_17_1911-369da7ca4937_accesstoken_initial_migraion.py
payapi/authentication/: models.py  routers.py
payapi/authentication/dependencies/: access_tokens.py  backend.py  fastapi_users_router.py  strategy.py  user_manager.py  users.py
payapi/core/actions/: create_user.py
payapi/db/: db_sessions.py
payapi/users/: models.py  routers.py  schemas.py  user_manager.py
